Bug 73355 - FILEOPEN: Draw 4.2 corrupts figures combined in previous version
Summary: FILEOPEN: Draw 4.2 corrupts figures combined in previous version
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: All All
: highest major
Assignee: Not Assigned
URL:
Whiteboard: BSA odf target:4.3.0 target:4.2.0
Keywords: regression
: 73204 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-07 11:24 UTC by Alexandr
Modified: 2014-01-27 11:00 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
A test file with combined lines (7.84 KB, application/vnd.oasis.opendocument.graphics)
2014-01-07 11:24 UTC, Alexandr
Details
A screenshot with LO 4.1 (58.43 KB, image/png)
2014-01-07 11:29 UTC, Alexandr
Details
A screenshot with LO 4.2.0.1 (54.52 KB, image/png)
2014-01-07 11:30 UTC, Alexandr
Details
three combinations of two objects - as in 4.1.4.2 and with screenshot (20.25 KB, application/vnd.oasis.opendocument.graphics)
2014-01-07 11:53 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandr 2014-01-07 11:24:26 UTC
Created attachment 91594 [details]
A test file with combined lines

When I open a file with combined lines created in LO Draw 4.1 in LO Draw 4.2, the lines change their positions.

Steps to reproduce:
1. Open Libre Office Draw 4.1.4
2. Draw some lines
3. Select them and combine (Modify->Combine)
4. Save the file
5. Open the file in Libre Office Draw 4.2

I attach a test file created in Libre Office Draw 4.1.4.2 from Debian Wheezy backports. One more example is attached to bug  73204

I tried to open the file in Libre Office 4.2.0.1 and  4.3.0.0.alpha0+ (
Build ID: fdc1b1fc174da27e3016370fdb603d6bbe49af4d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2013-12-26_10:00:24 ) with the same result.

I found a similar bug report for version 3.5 (see bug 53691)

Operating System: Debian
Version: 4.2.0.1 rc
Last worked in: 4.1.4.2 release
Comment 1 Alexandr 2014-01-07 11:29:24 UTC
Created attachment 91595 [details]
A screenshot with LO 4.1
Comment 2 Alexandr 2014-01-07 11:30:41 UTC
Created attachment 91596 [details]
A screenshot with LO 4.2.0.1
Comment 3 Cor Nouws 2014-01-07 11:52:41 UTC
thanks Alexandr. > New, Regression, major

I'll attach another sample file
Comment 4 Cor Nouws 2014-01-07 11:53:41 UTC
Created attachment 91597 [details]
three combinations of two objects - as in 4.1.4.2 and with screenshot
Comment 5 Cor Nouws 2014-01-07 11:55:50 UTC
problem already exists in 4.2.0 alpha1
Comment 6 Regina Henschel 2014-01-07 21:17:26 UTC
The problem is, that LO4.1 uses a special handling of combined shapes which is different from LO4.2 and different from older versions. You need to open the file in LO4.1, then goto Tools > Options > Load/Save > General and chose the ODF format version "1.2 Extenden (compat)". Then re-save the document. After that it should be correct in LO4.2.

The problem is not LO4.2 but the handling in LO4.1.
Comment 7 Regina Henschel 2014-01-10 17:40:47 UTC
Is there another behavior besides the handling of closed paths, that are affected by save in "1.2 Extended (compat)" mode? If not, I suggest, to change 4.1 to use save in "1.2 Extended (compat)" mode as default with the next update. That way the amount of such documents can be reduced. In addition, there should be a notice on the 4.2 release notes to correct the documents before changing to version 4.2.
Comment 8 Alexandr 2014-01-13 17:53:17 UTC
I change platform to all, because it is not a Linux specific problem.

I can not reproduce the problem with saving in “1.2 Extended (compat)” mode. But due to a warning in “Options” dialogue it “may cause information to be lost”. 

A notice in ReliaseNotes should be, but most of users does not read it. Also it makes some users downgrade LibreOffice when they meet such documents.

That's why I think saving in compatible mode is a workaround only, not a fix.
Comment 9 Björn Michaelsen 2014-01-17 09:40:29 UTC
(This is an automated message.)

Setting priority to highest as this is a 4.2 MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 10 Michael Stahl 2014-01-23 21:38:51 UTC
 a6d89e17995987549db36695f3ea490a18f30ba4..40543e5321c8f618c125fd6f7f9a24b87431277a

these 2 commits introduce the regression:

commit e44335abe006d05f0f915279605a03ef084116d6
Author:     Caolán McNamara <caolanm@redhat.com>
AuthorDate: Thu Oct 31 15:51:30 2013 +0000

    Related #i123433# PolyPolygonBezier must be drawing::PolyPolygonBezierCoords

    Change-Id: Idc7e0a2651f2e0b499bbf8b8443ffb84b54a45b6

commit 223f6b631c1b087754c0f9051fb55f029f2503ce
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Tue Oct 29 14:11:45 2013 +0000
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Thu Oct 31 15:56:14 2013 +0000

    Resolves: #i123433# Detect pseudo-vertices at svg import...

    unify svg:d handling, correct svg:d import for relative sub-polygons in svg
    import; changed default for moveto writes for svg:d in ODF to absolute
Comment 11 Michael Stahl 2014-01-23 21:42:31 UTC
*** Bug 73814 has been marked as a duplicate of this bug. ***
Comment 12 Michael Stahl 2014-01-24 11:44:50 UTC
(In reply to comment #6)
> The problem is, that LO4.1 uses a special handling of combined shapes which
> is different from LO4.2 and different from older versions. You need to open
> the file in LO4.1, then goto Tools > Options > Load/Save > General and chose
> the ODF format version "1.2 Extenden (compat)". Then re-save the document.
> After that it should be correct in LO4.2.
> 
> The problem is not LO4.2 but the handling in LO4.1.

loading the attachments in older versions shows that 3.5.0.3 up to 4.1.x
display the bugdocs in the same way, and the 4.2 regression looks
similar to the display in 3.4.6 and 3.3.4.

in any case 4.2 must be able to display documents stored by all older
versions the same way.
Comment 13 Caolán McNamara 2014-01-24 12:20:18 UTC
need to reconcile with bug 47406 and a2ee8055e9c136923f0244fe289cac6377933c31 and 7a19798c73fd39d8d69ff6364f0696e68cdd1381 methinks
Comment 14 Commit Notification 2014-01-24 12:56:50 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b663316e83ec6b19b8fc33ade38086b22ab04b67

Resolves: fdo#73355 reconcile legacy path bug detection



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2014-01-24 16:49:22 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b09fae12aaae3519559a1915d258525b5fbcfbca&h=libreoffice-4-2-0

Resolves: fdo#73355 reconcile legacy path bug detection


It will be available already in LibreOffice 4.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Caolán McNamara 2014-01-24 16:50:20 UTC
I guess its unclear if there will be a rc4, but if there is we should be covered.
Comment 17 Commit Notification 2014-01-24 16:51:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4479507f744149e8268be48de6d600e7ccefd0dd&h=libreoffice-4-2

Resolves: fdo#73355 reconcile legacy path bug detection


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Jean-Baptiste Faure 2014-01-24 22:00:10 UTC
*** Bug 73204 has been marked as a duplicate of this bug. ***
Comment 19 Jean-Baptiste Faure 2014-01-25 10:09:48 UTC
*** Bug 73204 has been marked as a duplicate of this bug. ***
Comment 20 Alexandr 2014-01-25 18:33:34 UTC
Caolán McNamara, thank you.
I tested combined figures in odt, odg (Draw), odg (Impress), odp, ods, otp, ots files saved in LibreOffice 4.1.4.2 with 1.2 extended (recommended) ODF format.

LibreOffice 4.3.0.0.alpha0+ Build ID: ecf617ee0cb74526e3989500c122835c32082845 TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-01-25_00:16:16 
opens them without problems.
Comment 21 Alex Thurgood 2014-01-27 08:39:48 UTC
*** Bug 74109 has been marked as a duplicate of this bug. ***
Comment 22 Jean-Baptiste Faure 2014-01-27 09:41:01 UTC
(In reply to comment #21)
> *** Bug 74109 has been marked as a duplicate of this bug. ***

I think that bug 74109 is not a duplicate of this one (see https://bugs.freedesktop.org/show_bug.cgi?id=74109#c3) but maybe they are linked.
The fix for this one does not solve the problem described in bug 74109.

Best regards. JBF