Resolves: fdo#73355 reconcile legacy path bug detection

reconcile
 "223f6b631c1b087754c0f9051fb55f029f2503ce
    Resolves: #i123433# Detect pseudo-vertices at svg import..."
with
 "7a19798c73fd39d8d69ff6364f0696e68cdd1381"
    Compatibility option for incorrect relative moves after closePath (fdo#47406)
and
 "a2ee8055e9c136923f0244fe289cac6377933c31"
    Fix fdo#47406 incorrect relative moves after closePath

Change-Id: I1221099a40500aeb4165a3350d8ae2df1fd3111b